# scripts

./: .gitignore  pyproject.toml
src/scripts/: apple_health.ipynb  minecraft_playtime.py
src/scripts/aoc/y2023/d10/: part1.py  test_examples.py
