[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scripts"
version = "0.1.0"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "typer~=0.9.0",
    "pytz~=2023.3",
    "tqdm~=4.66",
]

[project.optional-dependencies]
dev = [
    "black==23.9.1",
    "isort==5.12.0",
]

[project.scripts]
minecraft-playtime = "scripts.minecraft_playtime:app"

[tool.hatch.build.targets.sdist]
only-include = ["src/scripts"]

[tool.hatch.build.targets.wheel]
packages = ["src/scripts"]

[tool.isort]
profile = "black"
combine_as_imports = true
known_first_party = ["hexdoc"]

[tool.pyright]
pythonVersion = "3.11"
pythonPlatform = "All"

enableExperimentalFeatures = true

typeCheckingMode = "basic"

strictDictionaryInference = true
strictListInference = true
strictSetInference = true

reportAssertAlwaysTrue = "error"
reportConstantRedefinition = "error"
reportDeprecated = "error"
reportDuplicateImport = "error"
reportFunctionMemberAccess = "error"
reportIncompatibleMethodOverride = "error"
reportIncompleteStub = "error"
reportInconsistentConstructor = "error"
reportInvalidStringEscapeSequence = "error"
reportInvalidStubStatement = "error"
reportInvalidTypeVarUse = "error"
reportMatchNotExhaustive = "error"
reportMissingParameterType = "error"
reportMissingTypeStubs = "error"
reportOverlappingOverload = "error"
reportSelfClsParameterName = "error"
reportTypeCommentUsage = "error"
reportUnknownParameterType = "error"
reportUnnecessaryCast = "error"
reportUnnecessaryContains = "error"
reportUnsupportedDunderAll = "error"
reportUntypedBaseClass = "error"
reportUntypedClassDecorator = "error"
reportUntypedFunctionDecorator = "error"
reportUntypedNamedTuple = "error"
reportWildcardImportFromLibrary = "error"

reportMissingTypeArgument = "warning"
reportPrivateUsage = "warning"
reportUnknownArgumentType = "warning"
reportUnknownLambdaType = "warning"
reportUnknownMemberType = "warning"
reportUnnecessaryComparison = "warning"
reportUnnecessaryIsInstance =  	"warning"
reportUnusedClass = "warning"
reportUnusedExpression = "warning"
reportUnusedFunction = "warning"
reportUnusedImport = "warning"
reportUnusedVariable = "warning"

reportUnknownVariableType = "none"
reportIncompatibleVariableOverride = "none"
