[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scripts"
version = "0.1.0"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "typer~=0.9.0",
    "pytz~=2023.3",
    "tqdm~=4.66",
    "pytest~=7.4.3",
    "pandas~=2.2.0",
    "apple-health~=2.0.0",
    "casefy~=0.1.7",
    "pyarrow",
]

[project.optional-dependencies]
dev = [
    "ipykernel",
    "ruff",
    "nbstripout",
]

[project.scripts]
minecraft-playtime = "scripts.minecraft_playtime:app"

[tool.hatch.build.targets.sdist]
only-include = ["src/scripts"]

[tool.hatch.build.targets.wheel]
packages = ["src/scripts"]

[tool.ruff]
extend-select = [
    "I", # import sorting
]
extend-ignore = [
    # covered by Pyright
    "F821", # undefined variable
    "F401", # imported but unused
    "F841", # unused variable
]
extend-exclude = [
    "vendor",
    "venv",
    "**/.*",
    "**/node_modules",
    "**/__pycache__",
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.pyright]
pythonVersion = "3.11"
pythonPlatform = "All"

venvPath = "."
venv = "venv"

include = [
    "src",
    "test",
]
extraPaths = [
    "vendor",
]
exclude = [
    "noxfile.py",
    "vendor",
    "**/venv",
    "**/.*",
    "**/node_modules",
    "**/__pycache__",
    "**/template",
]

typeCheckingMode = "basic"

enableExperimentalFeatures = true
strictDictionaryInference = true
strictListInference = true
strictSetInference = true

reportAssertAlwaysTrue = "error"
reportConstantRedefinition = "error"
reportDeprecated = "error"
reportFunctionMemberAccess = "error"
reportIncompatibleMethodOverride = "error"
reportIncompatibleVariableOverride = "error"
reportIncompleteStub = "error"
reportInconsistentConstructor = "error"
reportInvalidStringEscapeSequence = "error"
reportInvalidStubStatement = "error"
reportInvalidTypeVarUse = "error"
reportMatchNotExhaustive = "error"
reportMissingParameterType = "error"
reportOverlappingOverload = "error"
reportSelfClsParameterName = "error"
reportTypeCommentUsage = "error"
reportUnknownParameterType = "error"
reportUnnecessaryCast = "error"
reportUnnecessaryContains = "error"
reportUnsupportedDunderAll = "error"
reportUntypedBaseClass = "error"
reportUntypedClassDecorator = "error"
reportUntypedFunctionDecorator = "error"
reportUntypedNamedTuple = "error"
reportWildcardImportFromLibrary = "error"

reportMissingTypeArgument = "warning"
reportPrivateUsage = "warning"
reportUnknownArgumentType = "warning"
reportUnknownLambdaType = "warning"
reportUnknownVariableType = "warning"
reportUnnecessaryComparison = "warning"
reportUnnecessaryIsInstance = "warning"
reportUnusedClass = "warning"
reportUnusedExpression = "warning"
reportUnusedFunction = "warning"
reportUnusedImport = "warning"
reportUnusedVariable = "warning"

reportMissingTypeStubs = "none"
reportDuplicateImport = "none"
reportUnknownMemberType = "none"
